--- a/Aula 2/css/style.css
+++ b/Aula 2/css/style.css
@@ -1,8 +1,8 @@
 body{
     background-color: black;
-    width: 99vw;
-    height: 99vh;
+    color: white;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -12,7 +12,7 @@ label{
     font-weight: bold;
     display: block;
 }
-.somar{
+.container{
     width: fit-content;
     height: fit-content;
     border: 1px solid rgb(0, 255, 13);
@@ -31,7 +31,7 @@ input[type="button"]{
     border-radius: 5px;
     display: block;
 }
-input[type="number"]{
+input {
     background-color: rgb(255, 255, 255);
     font-size: 20px;
     padding-top: 10px;
